--- a/cody/comparing-cody-vs-codeium.mdx
+++ b/cody/comparing-cody-vs-codeium.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Codeium: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-codeium.svg'
 summary: 'A comprehensive comparison of Sourcegraph Cody and Codeium, two leading AI-powered development assistants, examining their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Sourcegraph Cody, Codeium, AI code completion, developer tools, code generation, IDE integration, AI programming assistant'
 metaTitle: 'Sourcegraph Cody vs Codeium - AI Code Assistant Comparison (2025)'
