--- a/cody/comparing-cody-vs-qodo.mdx
+++ b/cody/comparing-cody-vs-qodo.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-qodo.svg'
 summary: 'An in-depth comparison of Sourcegraph Cody and Qodo Gen, exploring their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'Sourcegraph Cody, Qodo Gen, AI coding assistant, code completion, developer tools, IDE integration, code generation, AI programming tools'
 metaTitle: 'Sourcegraph Cody vs Qodo Gen - AI Code Assistant Comparison (2025)'
