--- a/cody/comparing-cody-vs-replit.mdx
+++ b/cody/comparing-cody-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Replit AI: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-replit.svg'
 summary: 'An in-depth comparison of Sourcegraph Cody and Replit AI, analyzing their features, pricing, and capabilities to help developers choose the right AI-powered development tool.'
 keywords: 'Sourcegraph Cody, Replit AI, AI code generation, developer tools, code completion, IDE integration, AI programming assistant, code analysis'
 metaTitle: 'Sourcegraph Cody vs Replit AI: The Ultimate Comparison Guide (2025)'
