--- a/cody/comparing-cody-vs-tabnine.mdx
+++ b/cody/comparing-cody-vs-tabnine.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Tabnine: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-tabnine.svg'
 summary: 'An in-depth comparison of Sourcegraph Cody and Tabnine, exploring their features, capabilities, and pricing to help developers choose the right AI coding assistant.'
 keywords: 'Sourcegraph Cody, Tabnine, AI code completion, developer tools, code generation, IDE integration, AI coding assistant, code analysis'
 metaTitle: 'Sourcegraph Cody vs Tabnine: AI Code Assistant Comparison (2025)'
