--- a/copilot/comparing-copilot-vs-codeium.mdx
+++ b/copilot/comparing-copilot-vs-codeium.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Codeium: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-codeium.svg'
 summary: 'A comprehensive comparison of GitHub Copilot and Codeium, analyzing their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'GitHub Copilot, Codeium, AI code generation, code completion, developer tools, IDE integration, AI programming assistant, code suggestions'
 metaTitle: 'GitHub Copilot vs Codeium (2025): In-depth Comparison of AI Coding Tools'
