--- a/copilot/comparing-copilot-vs-cody.mdx
+++ b/copilot/comparing-copilot-vs-cody.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Sourcegraph Cody: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-cody.svg'
 summary: 'A detailed comparison of GitHub Copilot and Sourcegraph Cody, exploring their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'GitHub Copilot, Sourcegraph Cody, AI code generation, developer tools comparison, code completion, AI pair programming'
 metaTitle: 'GitHub Copilot vs Sourcegraph Cody: The Ultimate Comparison Guide (2025)'
