--- a/copilot/comparing-copilot-vs-continue.mdx
+++ b/copilot/comparing-copilot-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-continue.svg'
 summary: 'A detailed comparison of GitHub Copilot and Continue, two leading AI code assistants, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'GitHub Copilot, Continue, AI code generation, developer tools, code completion, IDE integration, AI programming assistant, code suggestions'
 metaTitle: 'GitHub Copilot vs Continue: The Ultimate AI Code Assistant Comparison (2025)'
