--- a/copilot/comparing-copilot-vs-qodo.mdx
+++ b/copilot/comparing-copilot-vs-qodo.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-qodo.svg'
 summary: 'A comprehensive comparison of GitHub Copilot and Qodo Gen, exploring their features, capabilities, and pricing to help developers choose the right AI coding assistant'
 keywords: 'GitHub Copilot, Qodo Gen, AI code generation, code completion, developer tools, IDE integration, code assistant, AI programming'
 metaTitle: 'GitHub Copilot vs Qodo Gen (2025) - AI Code Assistant Comparison'
