--- a/copilot/comparing-copilot-vs-replit.mdx
+++ b/copilot/comparing-copilot-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Replit AI: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-replit.svg'
 summary: 'A detailed comparison of GitHub Copilot and Replit AI, examining their features, capabilities, pricing, and use cases to help developers choose the right AI-powered development tool.'
 keywords: 'GitHub Copilot, Replit AI, AI code generation, code completion, developer tools comparison, AI programming, code assistance, development environment'
 metaTitle: 'GitHub Copilot vs Replit AI (2025) - Complete Feature Comparison'
