--- a/copilot/comparing-copilot-vs-tabnine.mdx
+++ b/copilot/comparing-copilot-vs-tabnine.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Tabnine: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-tabnine.svg'
 summary: 'A comprehensive comparison of GitHub Copilot and Tabnine, analyzing their features, capabilities, and pricing to help developers choose the right AI coding assistant.'
 keywords: 'GitHub Copilot, Tabnine, AI code completion, code generation, developer tools, IDE integration, AI coding assistant, code suggestions'
 metaTitle: 'GitHub Copilot vs Tabnine Comparison (2025) - Complete Feature Analysis'
