--- a/cursor/comparing-cursor-vs-codeium.mdx
+++ b/cursor/comparing-cursor-vs-codeium.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Codeium: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-codeium.svg'
 summary: 'A comprehensive comparison of Cursor and Codeium, two leading AI-powered development tools, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Cursor, Codeium, AI code generation, code completion, developer tools comparison, AI programming tools, VS Code alternatives'
 metaTitle: 'Cursor vs Codeium (2025): AI Code Generation Tools Compared'
