--- a/cursor/comparing-cursor-vs-continue.mdx
+++ b/cursor/comparing-cursor-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-continue.svg'
 summary: 'A detailed comparison of Cursor and Continue, two leading AI-powered code editors, examining their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Cursor, Continue, AI code editor, code completion, VS Code, development tools, AI programming, code assistant, IDE comparison'
 metaTitle: 'Cursor vs Continue: AI Code Editor Comparison (2025) | Complete Guide'
