--- a/cursor/comparing-cursor-vs-copilot.mdx
+++ b/cursor/comparing-cursor-vs-copilot.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. GitHub Copilot: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-copilot.svg'
 summary: 'A comprehensive comparison between Cursor and GitHub Copilot, analyzing their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'Cursor, GitHub Copilot, AI code generation, code completion, developer tools, IDE integration, AI programming assistant, code suggestions, developer productivity'
 metaTitle: 'Cursor vs GitHub Copilot: The Ultimate AI Code Generation Tool Comparison (2025)'
