--- a/cursor/comparing-cursor-vs-qodo.mdx
+++ b/cursor/comparing-cursor-vs-qodo.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-qodo.svg'
 summary: 'A comprehensive comparison of Cursor and Qodo Gen, two leading AI-powered development tools, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Cursor, Qodo Gen, AI code generation, developer tools comparison, code completion, AI programming assistant, VS Code, IDE integration'
 metaTitle: 'Cursor vs Qodo Gen: AI Code Generation Tools Comparison (2025)'
