--- a/cursor/comparing-cursor-vs-replit.mdx
+++ b/cursor/comparing-cursor-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Replit: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-replit.svg'
 summary: 'A detailed comparison of Cursor and Replit, two leading AI-powered development environments, analyzing their features, pricing, and capabilities to help developers choose the right tool for their needs.'
 keywords: 'Cursor vs Replit, AI code editor comparison, AI development tools, code completion, VS Code AI, development environment comparison'
 metaTitle: 'Cursor vs Replit: In-depth Comparison of AI Code Generation Tools (2025)'
