--- a/cursor/comparing-cursor-vs-tabnine.mdx
+++ b/cursor/comparing-cursor-vs-tabnine.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Tabnine: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-tabnine.svg'
 summary: 'A comprehensive comparison of Cursor and Tabnine, two leading AI-powered code editors, analyzing their features, pricing, and capabilities for modern software development.'
 keywords: 'Cursor, Tabnine, AI code completion, code editor comparison, AI programming tools, developer productivity, VS Code, code generation'
 metaTitle: 'Cursor vs Tabnine: Ultimate AI Code Editor Comparison (2025)'
