--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Codeium vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-codeium-vs-devin.svg'
 summary: 'A detailed comparison of Codeium and Devin, two leading AI-powered development tools, analyzing their features, capabilities, and pricing to help developers make an informed choice.'
 keywords: 'Codeium, Devin, AI coding tools, code completion, developer tools, AI programming assistant, code generation, developer productivity'
 metaTitle: 'Codeium vs Devin: Complete AI Code Generation Tools Comparison (2025)'
