--- a/devin/comparing-continue-vs-devin.mdx
+++ b/devin/comparing-continue-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Continue vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-continue-vs-devin.svg'
 summary: 'A comprehensive comparison of Continue and Devin, two leading AI-powered development tools, analyzing their features, capabilities, and use cases for modern software development teams.'
 keywords: 'Continue, Devin, AI code assistant, code completion, developer tools, IDE integration, code generation, AI programming, software development'
 metaTitle: 'Continue vs Devin: The Ultimate AI Code Assistant Comparison (2025)'
