--- a/devin/comparing-copilot-vs-devin.mdx
+++ b/devin/comparing-copilot-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Copilot vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-copilot-vs-devin.svg'
 summary: 'A comprehensive comparison between GitHub Copilot and Devin, exploring their features, capabilities, and use cases for modern software development teams.'
 keywords: 'GitHub Copilot, Devin, AI coding tools, code generation, software development, AI pair programming, code completion, developer tools comparison'
 metaTitle: 'GitHub Copilot vs Devin: AI Code Generation Tools Comparison (2025)'
