--- a/devin/comparing-cursor-vs-devin.mdx
+++ b/devin/comparing-cursor-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Cursor vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-devin.svg'
 summary: 'A detailed comparison of Cursor and Devin, two leading AI-powered development tools, analyzing their features, capabilities, and pricing to help developers make an informed choice.'
 keywords: 'Cursor, Devin, AI code generation, developer tools, code completion, VS Code, AI programming assistant, software development tools'
 metaTitle: 'Cursor vs. Devin: The Ultimate AI Code Generation Tool Comparison (2025)'
