--- a/devin/comparing-qodo-vs-devin.mdx
+++ b/devin/comparing-qodo-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Qodo Gen vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-qodo-vs-devin.svg'
 summary: 'A comprehensive comparison of Qodo Gen and Devin, two leading AI-powered development tools, analyzing their features, capabilities, and pricing to help developers make an informed choice.'
 keywords: 'Qodo Gen, Devin, AI code generation, developer tools comparison, coding assistant, software development, AI programming tools'
 metaTitle: 'Qodo Gen vs Devin (2025): AI Code Generation Tools Comparison'
