--- a/devin/comparing-tabnine-vs-devin.mdx
+++ b/devin/comparing-tabnine-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Tabnine vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-tabnine-vs-devin.svg'
 summary: 'An in-depth comparison of Tabnine and Devin, two leading AI-powered development tools, analyzing their features, capabilities, and use cases for modern software development teams.'
 keywords: 'Tabnine, Devin, AI code completion, code generation, developer tools, IDE integration, software development, AI programming assistant'
 metaTitle: 'Tabnine vs Devin: Complete AI Code Generation Tool Comparison (2025)'
