--- a/others/comparing-codeium-vs-continue.mdx
+++ b/others/comparing-codeium-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'Codeium vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-codeium-vs-continue.svg'
 summary: 'A comprehensive comparison of Codeium and Continue, two leading AI-powered code assistance tools, analyzing their features, pricing, and integration capabilities to help developers make an informed choice.'
 keywords: 'Codeium, Continue, AI code generation, code completion, IDE integration, developer tools, AI programming assistant, code automation'
 metaTitle: 'Codeium vs Continue: AI Code Assistant Comparison (2025) | Complete Guide'
