--- a/others/comparing-codeium-vs-qodo.mdx
+++ b/others/comparing-codeium-vs-qodo.mdx
@@ -2,7 +2,7 @@
 title: 'Codeium vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-codeium-vs-continue.svg'
 summary: 'A comprehensive comparison of Codeium and Qodo Gen, two leading AI-powered development tools, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Codeium, Qodo Gen, AI code completion, developer tools comparison, code generation, AI coding assistant, IDE integration, development productivity'
 metaTitle: 'Codeium vs Qodo Gen: Complete AI Code Assistant Comparison (2025)'
