--- a/others/comparing-codeium-vs-replit.mdx
+++ b/others/comparing-codeium-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Codeium vs. Replit: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-codeium-vs-replit.svg'
 summary: 'A comprehensive comparison of Codeium and Replit, two leading AI-powered development tools, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Codeium, Replit, AI code generation, developer tools comparison, code completion, AI programming assistant, IDE integration, development platforms'
 metaTitle: 'Codeium vs Replit: The Ultimate AI Code Generation Tool Comparison (2025)'
