--- a/others/comparing-continue-vs-replit.mdx
+++ b/others/comparing-continue-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Continue vs. Replit: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-continue-vs-replit.svg'
 summary: 'A comprehensive comparison of Continue and Replit, two leading AI-powered development tools, analyzing their features, pricing, and capabilities for modern software development.'
 keywords: 'Continue, Replit, AI code generation, IDE integration, code completion, developer tools, AI programming assistant, code explanation'
 metaTitle: 'Continue vs Replit: AI Code Generation Tools Comparison (2025)'
