--- a/others/comparing-qodo-vs-continue.mdx
+++ b/others/comparing-qodo-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'Qodo Gen vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-qodo-vs-continue.svg'
 summary: 'A comprehensive comparison of Qodo Gen and Continue, two leading AI-powered code generation tools, examining their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Qodo Gen, Continue, AI code generation, developer tools comparison, code completion, IDE integration, AI coding assistant'
 metaTitle: 'Qodo Gen vs Continue: AI Code Assistant Comparison (2025) | Complete Guide'
