--- a/others/comparing-qodo-vs-replit.mdx
+++ b/others/comparing-qodo-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Qodo Gen vs. Replit AI: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-qodo-vs-replit.svg'
 summary: 'An in-depth comparison of Qodo Gen and Replit AI, exploring their features, capabilities, and pricing to help developers choose the right AI coding assistant.'
 keywords: 'Qodo Gen, Replit AI, AI code generation, developer tools comparison, coding assistant, AI programming tools, code completion, test generation'
 metaTitle: 'Qodo Gen vs Replit AI: Complete AI Code Assistant Comparison (2025)'
