--- a/tabnine/comparing-tabnine-vs-codeium.mdx
+++ b/tabnine/comparing-tabnine-vs-codeium.mdx
@@ -2,7 +2,7 @@
 title: 'Tabnine vs. Codeium: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-tabnine-vs-codeium.svg'
 summary: 'A comprehensive comparison of Tabnine and Codeium, two leading AI-powered code completion tools, analyzing their features, pricing, and capabilities to help developers make an informed choice.'
 keywords: 'Tabnine, Codeium, AI code completion, code generation, developer tools, IDE integration, AI coding assistant, code automation'
 metaTitle: 'Tabnine vs Codeium: AI Code Generation Tool Comparison (2025)'
