--- a/tabnine/comparing-tabnine-vs-continue.mdx
+++ b/tabnine/comparing-tabnine-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'Tabnine vs. Continue.dev: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-tabnine-vs-codeium.svg'
 summary: 'An in-depth comparison of Tabnine and Continue.dev, exploring their features, pricing, and capabilities to help developers choose the right AI coding assistant'
 keywords: 'Tabnine, Continue.dev, AI code completion, code generation, developer tools, IDE integration, AI coding assistant, code automation'
 metaTitle: 'Tabnine vs Continue.dev: Complete AI Code Assistant Comparison (2025)'
