--- a/tabnine/comparing-tabnine-vs-qodo.mdx
+++ b/tabnine/comparing-tabnine-vs-qodo.mdx
@@ -2,7 +2,7 @@
 title: 'Tabnine vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-tabnine-vs-qodo.svg'
 summary: 'A comprehensive comparison of Tabnine and Qodo Gen, exploring their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'Tabnine, Qodo Gen, AI code completion, code generation, developer tools, IDE integration, code assistant, AI coding'
 metaTitle: 'Tabnine vs Qodo Gen: The Ultimate AI Code Assistant Comparison (2025)'
