--- a/tabnine/comparing-tabnine-vs-replit.mdx
+++ b/tabnine/comparing-tabnine-vs-replit.mdx
@@ -2,7 +2,7 @@
 title: 'Tabnine vs. Replit AI: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-tabnine-vs-replit.svg'
 summary: 'A detailed comparison of Tabnine and Replit AI, exploring their features, capabilities, and pricing to help developers choose the right AI coding assistant.'
 keywords: 'Tabnine, Replit AI, code completion, AI coding tools, developer tools comparison, IDE integration, code generation, AI programming assistants'
 metaTitle: 'Tabnine vs Replit AI: The Ultimate AI Code Generation Tool Comparison (2025)'
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 ## Feature Comparison
 
 [
-['Terminal integration', '✓', '✓'],
-['Tab completion', '✓', '✓'],
-['Language agnostic', '✓', '✓'],
-['API access', '✓', '✗'],
-['Self hostable', '✓', '✗'],
-['Test generation', '✓', '✗'],
-['Real-time completions', '✓', '✓'],
-['Usage analytics', '✓', '✓'],
-['Explanations/Chat', '✓', '✓'],
-['Full codebase context', '✓', '✓'],
-['VS Code Support', '✓', '✗'],
-['JetBrains Support', '✓', '✗'],
-['NVIM Support', '✓', '✗'],
-['Models Supported', 'Universal and Custom Models', 'Built-in AI Models'],
-['Pricing', 'Free to Enterprise', 'Free to Core Premium']
+    ['Terminal integration', '✓', '✓'],
+    ['Tab completion', '✓', '✓'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✓', '✗'],
+    ['Self hostable', '✓', '✗'],
+    ['Test generation', '✓', '✗'],
+    ['Real-time completions', '✓', '✓'],
+    ['Usage analytics', '✓', '✓'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✓'],
+    ['VS Code Support', '✓', '✗'],
+    ['JetBrains Support', '✓', '✗'],
+    ['NVIM Support', '✓', '✗'],
+    ['Models Supported', 'Universal and Custom Models', 'Built-in AI Models'],
+    ['Pricing', 'Free to Enterprise', 'Free to Core Premium']
 ]
 
 ## Code Completion
