--- a/cody/comparing-cody-vs-continue.mdx
+++ b/cody/comparing-cody-vs-continue.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-continue.svg'
 summary: 'A comprehensive comparison of Sourcegraph Cody and Continue, two leading AI code assistants, analyzing their features, pricing, and integration capabilities to help developers make an informed choice.'
 keywords: 'Sourcegraph Cody, Continue, AI code assistant, code completion, developer tools, IDE integration, code generation, AI programming'
 metaTitle: 'Sourcegraph Cody vs Continue: The Ultimate AI Code Assistant Comparison (2025)'
