--- a/cursor/comparing-cursor-vs-cody.mdx
+++ b/cursor/comparing-cursor-vs-cody.mdx
@@ -3,7 +3,7 @@
 title: 'Cursor vs. Sourcegraph Cody: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cursor-vs-cody.svg'
 summary: 'An in-depth comparison of Cursor and Sourcegraph Cody, examining their features, pricing, and capabilities to help developers choose the right AI coding assistant.'
 keywords: 'Cursor, Sourcegraph Cody, AI code generation, code completion, developer tools, IDE integration, code assistant, AI programming'
 metaTitle: 'Cursor vs Sourcegraph Cody: AI Code Generation Tools Comparison (2025)'
