--- a/devin/comparing-cody-vs-devin.mdx
+++ b/devin/comparing-cody-vs-devin.mdx
@@ -2,7 +2,7 @@
 title: 'Sourcegraph Cody vs. Devin: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
-image: '/compare/comparing.svg'
+image: '/compare/comparing-cody-vs-devin.svg'
 summary: 'A comprehensive comparison between Sourcegraph Cody and Devin, two leading AI-powered development assistants, analyzing their features, capabilities, and pricing to help developers make an informed choice.'
 keywords: 'Sourcegraph Cody, Devin, AI coding assistant, code generation, developer tools, IDE integration, code completion, AI programming'
 metaTitle: 'Sourcegraph Cody vs Devin: The Ultimate AI Code Assistant Comparison (2025)'
